--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <header>
     <div class="container">
-        <h1>Alex Riley</h1>
+        <h1>Lilly Adjei</h1>
         <p>Cybersecurity Analyst | GRC Specialist | AWS Certified</p>
         <div class="social-links">
             <a href="[YOUR_LINKEDIN_URL]" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
@@ -193,7 +193,7 @@
 
 <footer>
     <div class="container">
-        <p>&copy; 2025 Alex Riley. All rights reserved. | Security Focused.</p>
+        <p>&copy; 2025 Lilly Adjei. All rights reserved. | Security Focused.</p>
     </div>
 </footer>
 
